# monorepo

./: README.md
diegote/: Cargo.toml  docker-compose.yml  fdaix_abi.json
diegote/db/: create_db.sql  creator.sql  schema.sql  video.sql
diegote/src/: cloudflare.rs  handlers.rs  main.rs  settings.rs  token.rs
diegote/videos/: video.m3u8  video.mpd
hetitor/: index.html  package.json
hetitor/src/: App.jsx  main.jsx
hetitor/src/abis/: FlowRates.json  fdaix.json
hetitor/src/components/Header/: Header.css  Header.jsx
hetitor/src/components/LoadingSpinner/: LoadingSpinner.css  LoadingSpinner.jsx
hetitor/src/components/Search/: Search.css  Search.jsx
hetitor/src/components/VideoPlayer/: VideoPlayer.css  VideoPlayer.jsx
hetitor/src/pages/LandingPage/: LandingPage.css  LandingPage.jsx
hetitor/src/pages/MyVideos/: MyVideos.css  MyVideos.jsx
hetitor/src/pages/UploadVideo/: UploadVideo.jsx
hetitor/src/utils/: superfluid.js  wallet.js
juanito/: hardhat.config.js  package.json
juanito/artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
juanito/artifacts/contracts/FlowRates.sol/: FlowRates.dbg.json
juanito/artifacts/contracts/IToken.sol/: IToken.dbg.json  IToken.json
juanito/artifacts/contracts/Token.sol/: Token.json
juanito/cache/: solidity-files-cache.json
juanito/contracts/: FlowRates.sol  IToken.sol  Token.sol
juanito/scripts/: deploy.js  deployFlowRates.js  deployToken.js  load.js
juanito/test/: FlowRates.js  Token.js
