[package]
name = "diegote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18" }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
dotenvy = "0.15.7"
futures = { version = "0.3.28", default-features = false, features = ["std", "async-await", "alloc"] }
#ethers = { version = "2.0.4", features = ["abigen", "rustls", "ws"] }
#hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.17", features = ["json", "rustls-tls", "tokio-rustls"], default-features = false }
rustube = "0.6.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
